<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HelloWorld"
        android:textSize="30sp" />

    <Button
        android:id="@+id/changemylang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/changeLang" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Imabutton" />

    <Button
        android:id="@+id/chatButton"
        android:onClick="chatActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/chatButton" />

    <Button
        android:id="@+id/test_toolbar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_test_toolbar"/>

    <Button
        android:id="@+id/weatherForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherforecast"/>


</LinearLayout>