<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/Login"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/login_name"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/Password"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login" />

</LinearLayout>
